crates/compiler/src/tests/e2e/good/0540_fn_side_effect/main.gom
fn side_effect() -> int32 {
    println("side effect!");
    42
}

fn main() {
    let _ = side_effect();
    println("after discard");
}
