crates/compiler/src/tests/e2e/bad/0029_func_used_as_value/main.gom
fn compute_answer() -> int32 {
  42
}

fn main() -> unit {
  go compute_answer();
  ()
}
